part 2 exercise added

--- a/solutions/day-01/index.html
+++ b/solutions/day-01/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <div id="text"></div>
-    <script src="level1.js"></script>
+    <script src="level1a.js"></script>
 </body>
 
 </html>
