Hexadecimal Colors generator

--- a/solutions/day-06/hexadecimal colors/public/index.html
+++ b/solutions/day-06/hexadecimal colors/public/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
-  <title>Number Generator</title>
+  <title>Hexadecimal Colors</title>
   <style>
     * {
       box-sizing: border-box;
@@ -40,7 +40,6 @@
     ul {
 
       display: flex;
-      /* height: 100vh; */
       flex-wrap: wrap;
       text-align: center;
       margin: 2rem 6rem;
@@ -52,25 +51,10 @@
       margin: 1px;
       width: 100px;
       height: 100px;
-      font-size: 34px;
-      font-weight: 900;
+      font-size: 18px;
       display: flex;
       align-items: center;
       justify-content: center;
-      color: #fff;
-
-    }
-
-    .green {
-      background-color: green;
-    }
-
-    .yellow {
-      background-color: yellow;
-    }
-
-    .brown {
-      background-color: brown;
     }
   </style>
 </head>
