--- a/solutions/day-08/backgroundChangers/public/index.html
+++ b/solutions/day-08/backgroundChangers/public/index.html
@@ -1,106 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link
+            href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500|Roboto:300,400,500&display=swap"
+            rel="stylesheet"
+        />
+        <meta
+            name="description"
+            content="Web site created using create-react-app"
+        />
 
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500|Roboto:300,400,500&display=swap"
-    rel="stylesheet" />
-  <meta name="description" content="Web site created using create-react-app" />
+        <title>30 Days Of React App</title>
+        <style>
+            /* == General style === */
 
-  <title>30 Days Of React App</title>
-  <style>
-    /* == General style === */
+            * {
+                box-sizing: border-box;
+                padding: 0;
+                margin: 0;
+            }
 
-    * {
-      box-sizing: border-box;
-      padding: 0;
-      margin: 0;
-    }
+            html,
+            body {
+                height: 100%;
+                line-height: 1.5;
+                font-family: 'Montserrat';
+                font-weight: 300;
+                color: black;
+            }
 
-    html,
-    body {
-      height: 100%;
-      line-height: 1.5;
-      font-family: 'Montserrat';
-      font-weight: 300;
-      color: black;
-    }
+            .root {
+                min-height: 100%;
+                position: relative;
+            }
 
-    .root {
-      min-height: 100%;
-      position: relative;
-    }
+            .header-wrapper,
+            .main-wrapper,
+            .footer-wrapper {
+                width: 85%;
+                margin: auto;
+            }
 
-    .header-wrapper,
-    .main-wrapper,
-    .footer-wrapper {
-      width: 85%;
-      margin: auto;
-    }
+            .header-wrapper,
+            .main-wrapper {
+                padding: 10px;
+                margin: 2px auto;
+            }
 
-    .header-wrapper,
-    .main-wrapper {
-      padding: 10px;
-      margin: 2px auto;
-    }
+            h1 {
+                font-size: 70px;
+                font-weight: 300;
+            }
 
-    h1 {
-      font-size: 70px;
-      font-weight: 300;
-    }
+            h2,
+            h3 {
+                font-weight: 300;
+            }
 
-    h2,
-    h3 {
-      font-weight: 300;
-    }
+            header {
+                padding: 25;
+                padding: 10px;
+            }
 
-    header {
-      padding: 25;
-      padding: 10px;
-    }
+            main {
+                padding: 10px;
+                padding-bottom: 60px;
+                /* Height of the footer */
+            }
 
-    main {
-      padding: 10px;
-      padding-bottom: 60px;
-      /* Height of the footer */
-    }
+            ul {
+                margin-left: 15px;
+            }
 
-    ul {
-      margin-left: 15px;
-    }
+            ul li {
+                list-style: none;
+            }
 
-    ul li {
-      list-style: none;
-    }
+            span {
+                font-weight: 300;
+            }
 
-    footer {
-      position: fixed;
-      bottom: 0;
-      width: 100%;
-      height: 60px;
-      /* Height of the footer */
-    }
+            footer {
+                position: fixed;
+                bottom: 0;
+                width: 100%;
+                height: 60px;
+                margin-top: 2rem;
+                /* Height of the footer */
+            }
 
-    .footer-wrapper {
-      font-weight: 400;
-      text-align: center;
-      line-height: 60px;
-    }
-
-    .user-card {
-      margin-top: 10px;
-    }
-
-    .user-card>img {
-      border-radius: 50%;
-      width: 14%;
-    }
-  </style>
-</head>
-
-<body>
-  <div id="root"></div>
-</body>
-
+            .footer-wrapper {
+                font-weight: 400;
+                text-align: center;
+                line-height: 60px;
+            }
+            .user-card {
+                margin-top: 10px;
+            }
+            .user-card > img {
+                border-radius: 50%;
+                width: 14%;
+            }
+            .card-text {
+                margin: 1rem 2rem;
+                padding-bottom: 2rem;
+            }
+        </style>
+    </head>
+    <body>
+        <div id="root"></div>
+    </body>
 </html>
